Admins or team owners can edit a team

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,6 +4,7 @@ one:
     first_name: Leo
     last_name: Doe
     encrypted_password: <%= BCrypt::Password.create('password') %>
+    admin: true
 
 two:
     id: 2
