--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -2,8 +2,10 @@ one:
   id: 1
   name: "Team Alpha"
   owner_id: 1
+  creator_id: 1
 
 two:
   id: 2
   name: "Team Beta"
   owner_id: 1
+  creator_id: 1
