--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,1 +1,13 @@
+one:
+  id: 1
+  ticket_id: 1
+  body: Comment 1
+  author_id: 1
+  created_at: 2025-02-20
 
+two:
+  id: 2
+  ticket_id: 1
+  body: Comment 2
+  author_id: 1
+  created_at: 2025-02-21
