--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-        run: bin/rails test
+        run: bin/rails test:all
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v6
